Expose enable rollback flag
